--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<html> <link rel="stylesheet" media="all" href="/vectorPlayer.31c84f28.css" data-turbolinks-track="true"> <body> <video playsinline="" webkit-playsinline="" controls poster="http://nova-stat-production.alo7.com/metrics/20180821/metrics_491842_59893_11225a0e-a5ed-11e8-92cd-e67ae8dd0c78/FixedFpsKeyFrameExtracter/0/55.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20181008T034734Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=AKIAPAMJVVAF2ZZDEKNA%2F20181008%2Fcn-north-1%2Fs3%2Faws4_request&X-Amz-Signature=f0e5cffb5d21a90a93fdba3033e4fe9dd1a3457fc416d4d188779df6108218e4"> <source preload="auto" src="/highlight_clip.1016c645.mp4" type="video/mp4" x5-video-player-type="h5"> Your browser does not support the <code>video</code> element. </video> <div class="animation"></div> <script src="/vectorPlayer.51e1fc1c.js"></script> </body> </html>
+<html>
+<link rel="stylesheet" media="all" href="./vectorPlayer.31c84f28.css" data-turbolinks-track="true">
+
+<body> <video playsinline="" webkit-playsinline="" controls poster="http://nova-stat-production.alo7.com/metrics/20180821/metrics_491842_59893_11225a0e-a5ed-11e8-92cd-e67ae8dd0c78/FixedFpsKeyFrameExtracter/0/55.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20181008T034734Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=AKIAPAMJVVAF2ZZDEKNA%2F20181008%2Fcn-north-1%2Fs3%2Faws4_request&X-Amz-Signature=f0e5cffb5d21a90a93fdba3033e4fe9dd1a3457fc416d4d188779df6108218e4">
+        <source preload="auto" src="./highlight_clip.1016c645.mp4" type="video/mp4" x5-video-player-type="h5"> Your
+        browser does not support the <code>video</code> element. </video>
+    <div class="animation"></div>
+    <script src="./vectorPlayer.51e1fc1c.js"></script>
+</body>
+
+</html>
